--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@ crossorigin="anonymous">
 <main>
     <div class="body-width-115f6 flex-c31d5 examples-c30bc">
         <nav class="example-nav-0e953" id="examplesNav">
-            <h4 id="groupHeader-1" class="active">Books</h4>
+            <h4 id="groupHeader-1" class="active">Tactics 2001/战术组合 2001</h4>
             <ul id="groupContainer-1" style="">
-                <li id="exampleLink-1000" class="" data-id="0">Tactics 2001</li>
-                <li id="exampleLink-1001" class="" data-id="1">By strategy</li>
+                <li id="exampleLink-1000" class="" data-id="0">Tactics/题库</li>
+                <li id="exampleLink-1001" class="" data-id="1">Instruction/说明</li>
+				<li id="exampleLink-1002" class="" data-id="2">Examples/例子</li>
             </ul>
             <h4 id="groupHeader-5" >Instruction</h4>
             <ul id="groupContainer-5" style="display:none">
@@ -66,7 +67,7 @@ crossorigin="anonymous">
                     <div class="dropdown">
                         <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="0"> <img src="img/chesspieces/wikipedia/0.png"> </button>
                         <div class="dropdown-menu">
-							<button class="dropdown-item" type="button" data-id="0"><img 
+                            <button class="dropdown-item" type="button" data-id="0"><img 
 							src="img/chesspieces/wikipedia/0.png"></button>
                             <button class="dropdown-item" type="button" data-id="P"><img src="img/chesspieces/wikipedia/wP.png"></button>
                             <button class="dropdown-item" type="button" data-id="N"><img src="img/chesspieces/wikipedia/wN.png"></button>
@@ -78,16 +79,16 @@ crossorigin="anonymous">
                     <div class="dropdown">
                         <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="0"> - </button>
                         <div class="dropdown-menu">
-							<button class="dropdown-item" type="button" data-id="0">-</button>
+                            <button class="dropdown-item" type="button" data-id="0">-</button>
                             <button class="dropdown-item" type="button" data-id="A">A</button>
                             <button class="dropdown-item" type="button" data-id="B">B</button>
                             <button class="dropdown-item" type="button" data-id="C">C</button>
                             <button class="dropdown-item" type="button" data-id="D">D</button>
                             <button class="dropdown-item" type="button" data-id="E">E</button>
                             <button class="dropdown-item" type="button" data-id="F">F</button>
-							<button class="dropdown-item" type="button" data-id="G">G</button>
-							<button class="dropdown-item" type="button" data-id="H">H</button>
-							<button class="dropdown-item" type="button" data-id="I">I</button>
+                            <button class="dropdown-item" type="button" data-id="G">G</button>
+                            <button class="dropdown-item" type="button" data-id="H">H</button>
+                            <button class="dropdown-item" type="button" data-id="I">I</button>
                         </div>
                     </div>
                 </div>
@@ -134,7 +135,7 @@ crossorigin="anonymous">
                 </div>
             </div>
             <div id="realBodyContainer"> </div>
-			<hr color="#E1E1E1" SIZE="1">
+            <hr color="#E1E1E1" SIZE="1">
             <div class="d-flex justify-content-center" style="margin-top: 20px">
                 <nav aria-label="Page navigation example">
                     <div class="page-item" hidden><a class="page-link" id="pageId" href="#">1</a></div>
@@ -146,8 +147,99 @@ crossorigin="anonymous">
             </div>
         </div>
         <div class="examples-body-9af4d" data-id="1" style="display:none">
-            <h4>心有所住</h4>
+            <div> <i>ANTHOLOGY OF CHESS COMBINATIONS</i> brings a selection of the most valuable achievements made at the competitions for 200 years (the oldest example is from 1789). It is certain that all the examples which deserve consideration are not collected. But most of them are here. Total of 2001 combinations. <br>
+                <b>Chess combination</b> is a forced variation with a sacrifice which leads to a positive result. Classification of chess combinations, which has this definition as its basis, removes all possible mistakes when making a classificaiton. Which is an unavoidable condition. <br>
+                <br>
+                <h4>In the example</h4>
+                <br>
+                <div class="row">
+                    <div class="col-sm instruction-line">
+                        <p>&#9817 A (code)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>1,2,3 || &#9817 (sacrifice)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>it is the question of combinations with a sacrifice of pawns only (弃兵带来的优势)</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h4>A few more examples</h4>
+                <br>
+                <div class="row">
+                    <div class="col-sm instruction-line">
+                        <p>&#9816 A (code)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>&#9816 (sacrifice)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>combinations with a sacrifice only one knight (弃马带来的优势)</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm instruction-line">
+                        <p>&#9815 C (code)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>&#9815 &#9816 (sacrifice)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>combinations with a sacrifice only one bishop and one knight (弃象和马带来的优势)</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm instruction-line">
+                        <p>&#9814 G (code)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>&#9814 &#9815 &#9816 (sacrifice)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>combinations with a sacrifice only one bishop and one knight (弃车、象和马带来的优势)</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm instruction-line">
+                        <p>&#9813 M (code)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>|| &#9813 (sacrifice)</p>
+                    </div>
+                    <div class="col-sm instruction-line">
+                        <p>combinations which are not comprised by the previous codes with a sacrifice of a queen (弃后带来的优势)</p>
+                    </div>
+                </div>
+            </div>
+            <div> Such a numeric classification is not based on the character of a position or some of the themes that have found their places in chess theory. Two additional criteria remove this emptiness:
+                <h4>1.</h4>
+                <ul>
+                    <li><b>I</b> Combinations with mating attack (战术组合技巧)</li>
+                    <li><b>II</b> Combinations to reach the draw (逼和)</li>
+                    <li><b>III</b> Combinations leading to material advantage (组合获取重要优势)</li>
+                    <li><b>IV</b> All the others combinations (其它的战术组合)</li>
+                </ul>
+                <h4>2.</h4>
+                <ul>
+                    <li><b>a</b> Annihilation of defence (清除保护)</li>
+                    <li><b>b</b> Blockade (封锁)</li>
+                    <li><b>c</b> Clearance (清除障碍)</li>
+                    <li><b>d</b> Deflection (腾挪)</li>
+                    <li><b>e</b> Discovered attack (发现进攻)</li>
+                    <li><b>f</b> Pinning (牵制)</li>
+                    <li><b>g</b> Demolition of pawn structure (破环兵结构)</li>
+                    <li><b>h</b> Decoy (陷阱)</li>
+                    <li><b>i</b> Interference (堵塞)</li>
+                    <li><b>j</b> Double attack (双重打击)</li>
+                </ul>
+            </div>
+            <div> Some examples have more than one theme, and they are marked in such a way. <br>
+                Sign * beside the players' names show that it is a position from the analysis of an important variation, and not the original moves of the game. </div>
         </div>
+		<div class="examples-body-9af4d" data-id="2" style="display:none">
+			举个例子
+		</div>
     </div>
 </main>
 <footer>
