--- a/pagination.html
+++ b/pagination.html
@@ -36,16 +36,24 @@ $( document ).ready(hello_world);
             <button class="dropdown-item" type="button" data-id="4"><img src="img/chesspieces/wikipedia/wQ.png"></button>
         </div>
     </div>
-	<div class="dropdown">
+    <div class="dropdown">
         <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>A</span></button>
         <div class="dropdown-menu">
-			<button class="dropdown-item" type="button" data-id="0">A</button>
+            <button class="dropdown-item" type="button" data-id="0">A</button>
             <button class="dropdown-item" type="button" data-id="1">B</button>
             <button class="dropdown-item" type="button" data-id="2">C</button>
             <button class="dropdown-item" type="button" data-id="3">D</button>
             <button class="dropdown-item" type="button" data-id="4">E</button>
             <button class="dropdown-item" type="button" data-id="5">F</button>
         </div>
+    </div>
+</div>
+<div>
+    <h4>In the example</h4>
+    <div class="row">
+        <div class="col-sm"> &#9817 A(code) </div>
+        <div class="col-sm"> 1,2,3 || &#9817 (sacrifice) </div>
+        <div class="col-sm"> it is the question of combinations with a sacrifice of pawns only (弃兵带来的优势) </div>
     </div>
 </div>
 </body>
