add theme and combination selection

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ crossorigin="anonymous">
             <ul id="groupContainer-1" style="">
                 <li id="exampleLink-1000" class="" data-id="0">Tactics/题库</li>
                 <li id="exampleLink-1001" class="" data-id="1">Instruction/说明</li>
-				<li id="exampleLink-1002" class="" data-id="2">Examples/例子</li>
+                <li id="exampleLink-1002" class="" data-id="2">Examples/例子</li>
             </ul>
             <h4 id="groupHeader-5" >Instruction</h4>
             <ul id="groupContainer-5" style="display:none">
@@ -89,6 +89,32 @@ crossorigin="anonymous">
                             <button class="dropdown-item" type="button" data-id="G">G</button>
                             <button class="dropdown-item" type="button" data-id="H">H</button>
                             <button class="dropdown-item" type="button" data-id="I">I</button>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="0"> - </button>
+                        <div class="dropdown-menu">
+                            <button class="dropdown-item" type="button" data-id="0">-</button>
+                            <button class="dropdown-item" type="button" data-id="I">I</button>
+                            <button class="dropdown-item" type="button" data-id="II">II</button>
+                            <button class="dropdown-item" type="button" data-id="III">III</button>
+                            <button class="dropdown-item" type="button" data-id="IV">IV</button>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-id="0"> - </button>
+                        <div class="dropdown-menu">
+                            <button class="dropdown-item" type="button" data-id="0">-</button>
+                            <button class="dropdown-item" type="button" data-id="a">a</button>
+                            <button class="dropdown-item" type="button" data-id="b">b</button>
+                            <button class="dropdown-item" type="button" data-id="c">c</button>
+                            <button class="dropdown-item" type="button" data-id="d">d</button>
+                            <button class="dropdown-item" type="button" data-id="e">e</button>
+                            <button class="dropdown-item" type="button" data-id="f">f</button>
+                            <button class="dropdown-item" type="button" data-id="g">g</button>
+                            <button class="dropdown-item" type="button" data-id="h">h</button>
+                            <button class="dropdown-item" type="button" data-id="i">i</button>
+                            <button class="dropdown-item" type="button" data-id="j">j</button>
                         </div>
                     </div>
                 </div>
@@ -237,9 +263,7 @@ crossorigin="anonymous">
             <div> Some examples have more than one theme, and they are marked in such a way. <br>
                 Sign * beside the players' names show that it is a position from the analysis of an important variation, and not the original moves of the game. </div>
         </div>
-		<div class="examples-body-9af4d" data-id="2" style="display:none">
-			举个例子
-		</div>
+        <div class="examples-body-9af4d" data-id="2" style="display:none"> 举个例子 </div>
     </div>
 </main>
 <footer>
